tests/NormalTests/paczka1/fuzzy1/97457220.err
Error in line 6: HikGAEJN0Q S576 87,8
Error in line 12: lnkA6kTqRb A327 4,3
Error in line 16: V7C2NuQqF A327 30,7
Error in line 25: 3TPkr7k S352 12,2
Error in line 28: 3TPkr7k A327 31,6
Error in line 19: lnkA6kTqRb S576 64,6
